Try a fix to overflowing tables

--- a/atomos/style.css
+++ b/atomos/style.css
@@ -109,7 +109,7 @@ h1 {
     /* Main control of the data table */
     margin-top: 5px;
     border-collapse: collapse;
-    width: 500px
+    width: 280px
 }
 
 .data-table table {
